$Id$

2020-02-25  Christian Franke  <franke@computer.org>

	Silence some warnings from g++ 9.2:
	atacmds.cpp: -Waddress-of-packed-member.
	os_win32.cpp: -Wcast-function-type.
	smartd.cpp: -Wformat-truncation.

2020-02-25  Fabrice Fontaine  <fontaine.fabrice@gmail.com>

	configure.ac: fix stack-protector detection.
	Use AC_LINK_IFELSE instead of AC_COMPILE_IFELSE to check for
	stack-protector availability as some compilers could missed the
	needed library (-lssp or -lssp_nonshared) at linking step.

2020-01-11  Christian Franke  <franke@computer.org>

	dev_jmb39x_raid.cpp: Add '-d jmb39x-q,...' device type for JMB39x
	protocol variant used by QNAP-TR004 NAS (#1283).
	dev_interface.cpp: Update help text.
	smartctl.8.in, smartd.conf.5.in: Document '-q' suffix.

2020-01-02  Christian Franke  <franke@computer.org>

	configure.ac: Use 'uname -n' if 'hostname' is not available
	(GH PR 44).  Remove check for SVN < 1.7.

2020-01-01  Christian Franke  <franke@computer.org>

	Happy New Year!  Update copyright year in version info.

2019-12-30  Christian Franke  <franke@computer.org>

	smartmontools 7.1

2019-12-29  Christian Franke  <franke@computer.org>

	smartctl.8.in: Add info about AMD Windows RAID driver.
	Fix some font changes.

	os_win32/installer.nsi: Delete old ChangeLog-5.0-6.0 on update
	installs.  Remove outdated delete commands.

	scsicmds.cpp: Remove never needed include of atacmds.h.

	ataprint.cpp, smartd.cpp: Silence 'multiplication overflow' warning
	from lgtm.

	ataprint.cpp: Fix size of Device Statistics value.

	os_win32.cpp: CSMI: Detect missing ATA output registers.

2019-12-28  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Crucial/Micron MX500 SSDs: New entry to handle bogus
	  attribute 197 (#1227)
	- Phison Driven SSDs: Kingston DC450R (#1249),
	  Patriot Flare, Blast, Blaze (#830), Burst (#1182)
	- Silicon Motion based SSDs: Patriot P200, TC-Sunbow X3 (#1261),
	  Team Group L5Lite 3D T253TD variant
	- Seagate IronWolf: ST6000VN0033 (#1273)