@@ -1,5 +1,11 @@
 $Id$
 
+2020-03-01  Christian Franke  <franke@computer.org>
+
+	os_win32.cpp: Remove backward compatibility fixes for include files
+	of very old versions of Cygwin, MinGW and MSVC.
+	configure.ac, Makefile.am: Remove check for DDK include files.
+
 2020-02-25  Christian Franke  <franke@computer.org>
 
 	Silence some warnings from g++ 9.2:
